--- a/conf/model.yaml
+++ b/conf/model.yaml
@@ -1,4 +1,4 @@
-require_improvement: 10
+require_improvement: 15
 batch_size: 64
 
 lr: 0.0003
@@ -9,11 +9,13 @@ epoch: 1000
 dropout: 0.5
 random_embedding: True
 
-#char_emb_dim: 300
+char_emb_dim: 300
 word_emb_dim: 300
 
 # model_num对应不同的模型结构
-model_num: 1
+model_num: 2
 model:
   1: {encoder_type: "bilstm_crf", hidden_dim: 200, num_layers: 1, batch_first: True, bidirectional: True, feature_emb_dim: 100,
         model_path: "saved_models/bilstm_crf/bilstm_crf"}
+  2: {encoder_type: "char_bilstm_crf", hidden_dim: 200, num_layers: 1, batch_first: True, bidirectional: True, feature_emb_dim: 100,
+      model_path: "saved_models/char_bilstm_crf/char_bilstm_crf"}
